[package]
name = "csctrl"
version = "0.1.0"
edition = "2021"
authors = ["joaofonseca.dev"]
description = "Manager for Counter-Strike 2 servers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
clap = { version = "4.4.6", features = ["derive"] }
crossterm = "0.27.0"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
