[package]
name = "csctrl"
version = "0.1.0"
edition = "2021"
authors = ["joaofonseca.dev"]
description = "Manager for Counter-Strike 2 servers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
config = "0.13.3"
crossterm = "0.27.0"
hyper = { version = "0.14.27", features = ["full"] }
rand = "0.8.5"
ratatui = "0.23.0"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
regex = "1.10.2"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
